fix: thêm search cho inventory
